--- a/package.json
+++ b/package.json
@@ -4,9 +4,15 @@
     "cors": "^2.8.5",
     "eslint": "^8.34.0",
     "express": "^4.18.2",
+    "husky": "^8.0.3",
     "mongoose": "^6.9.2",
     "nodemon": "^2.0.20",
     "prettier": "^2.8.4",
     "request": "^2.88.2"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "sh .husky/pre-commit"
+    }
   }
 }
