--- a/prescripcion/package.json
+++ b/prescripcion/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.0.3",
     "eslint": "^8.34.0",
     "express": "^4.18.2",
+    "husky": "^8.0.3",
     "mongoose": "^6.9.2",
     "nodemon": "^2.0.20",
     "prettier": "^2.8.4"
