--- a/usario/package.json
+++ b/usario/package.json
@@ -4,6 +4,7 @@
     "dotenv": "^16.0.3",
     "eslint": "^8.33.0",
     "express": "^4.18.2",
+    "husky": "^8.0.3",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.0",
     "prettier": "^2.8.3",
